+ added new modal used for improving messages to user when staking/unstaking/depositing/claiming + improved wording on various buttons + set default withdraw tab to delta + added faq + added functionality to add delta and rLP tokens to meta mask + added tooltip on vault on burn checkbox + fixed issue on mobile where delta stake (deposit) button would disappear

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -131,6 +131,53 @@
   cursor: default;
 }
 
+.receipt__list {
+  margin: 1rem 0 1rem;
+}
+
+.receipt__list-row {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.receipt__item {
+  background-color: #fff;
+  z-index: 2;
+  padding: 0 0.15rem 0 0;
+  color: #1f1f1f;
+}
+
+.receipt__cost {
+  margin: 0;
+  padding: 0 0 0 0.15rem;
+  background-color: #fff;
+  z-index: 2;
+  color: #1f1f1f;
+}
+
+.receipt__list-row:after {
+  content: '';
+  display: block;
+  border-bottom: 1px dotted rgba(0,0,0,0.15);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: -0.25rem;
+  z-index: 1;
+}
+
+/* ND: needed to add this in order to overwrite style on modal ok button */
+@media (min-width: 640px) {
+  .modal-ok-button {
+    min-width: 120px;
+  }
+  .modal-cancel-button {
+    min-width: 120px;
+    margin-left: 8px !important;
+  }
+}
+
 .flex-end {
   align-self: flex-end;
 }
